@@ -1,3 +1,9 @@
+2003-02-09  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h:
+	Rework: %r9 is destroyed by functions so don't use it as
+	temporary, align stack correctly, fix parameter for CDISABLE.
+
 2003-02-07  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* sysdeps/sh/Makefile: New file.
